--- a/trunk/src/ghostclient/SVN/.project
+++ b/trunk/src/ghostclient/SVN/.project
@@ -2,18 +2,15 @@
 <projectDescription>
 	<name>SVN</name>
 	<comment></comment>
-	<projects>
-	</projects>
+	<projects></projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
+			<arguments></arguments>
 		</buildCommand>
 		<buildCommand>
 			<name>eclipseme.core.preverifier</name>
-			<arguments>
-			</arguments>
+			<arguments></arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
