--- a/trunk/src/ghostclient/.project
+++ b/trunk/src/ghostclient/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SVN</name>
+	<name>ghostclient</name>
 	<comment></comment>
 	<projects></projects>
 	<buildSpec>
