--- a/trunk/src/ghostclient/.project
+++ b/trunk/src/ghostclient/.project
@@ -2,15 +2,18 @@
 <projectDescription>
 	<name>ghostclient</name>
 	<comment></comment>
-	<projects></projects>
+	<projects>
+	</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments></arguments>
+			<arguments>
+			</arguments>
 		</buildCommand>
 		<buildCommand>
 			<name>eclipseme.core.preverifier</name>
-			<arguments></arguments>
+			<arguments>
+			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
