GhostClient con ingreso de Kml. Uso de icono para aplicativo celular. Cambio de nombres en clases pantalla y Hello map por GhostGarbage y Map respectivamente
git-svn-id: https://svn.ghost.webhop.org:8443@61 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/src/ghostclient/.classpath
+++ b/trunk/src/ghostclient/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="J2MELIB"/>
-	<classpathentry kind="lib" path="C:/lib/nutiteq_maps_library_0.8.0_src_0/maps_lib-0.8.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="maps_lib-0.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Archivos de programa/Java/jre1.6.0_07/lib/rt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
