--- a/trunk/src/ghostclient/.classpath
+++ b/trunk/src/ghostclient/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="J2MELIB"/>
 	<classpathentry exported="true" kind="lib" path="maps_lib-0.8.0.jar"/>
 	<classpathentry kind="lib" path="C:/Archivos de programa/Java/jre1.6.0_07/lib/rt.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Documents and Settings/Personal/Mis documentos/Descargas/jsonme.jar"/>
+	<classpathentry kind="lib" path="jsonme.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
